# C.CPP.Project.Template

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
MyApp/: CMakeLists.txt  main.cpp
MyLib/: CMakeLists.txt  MyLib.cpp
